--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.datasource.db-kind=mysql
+quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/quarkus_social
+quarkus.datasource.username=root
+quarkus.datasource.password=1234567
