--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ quarkus.datasource.db-kind=mysql
 quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/quarkus_social
 quarkus.datasource.username=root
 quarkus.datasource.password=1234567
+
+quarkus.swagger-ui.always-include=true
