--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,15 @@ quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/quarkus_social
 quarkus.datasource.username=root
 quarkus.datasource.password=1234567
 
+#TEST
+%test.quarkus.datasource.db-kind=h2
+%test.quarkus.datasource.username=sa
+%test.quarkus.datasource.password=sa
+%test.quarkus.datasource.jdbc.url=jdbc:h2:mem:quarkus-social
+%test.quarkus.datasource.jdbc.max-size=16
+%test.quarkus.hibernate-orm.database.generation=drop-and-create
+%test.quarkus.hibernate-orm.log.sql=true
+
 quarkus.swagger-ui.always-include=true
 
 quarkus.http.cors=true
